tests/regression/baselines/e2e_err_duplicate_match_tags.expected
ERROR
SyntaxError: Duplicate match pattern
    match v with
    | `A x -> x
    | `A y -> y
      ^~~~      
Note: Variant already matched here:
let f = fun v ->
    match v with
    | `A x -> x
      ^~~~      
    | `A y -> y
